# mpp-swift

./: .gitignore  .spi.yml  .swiftformat  .swiftlint.yml  AGENTS.md  ARCHITECTURE.md  CONFORMANCE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  Package.swift  README.md  REVIEW.md  SECURITY.md
.github/: dependabot.yml  secret-scan-patterns.txt
.github/workflows/: ci.yml  devin-review.yml  release-ffi.yml
Scripts/: assert-ffi-isolation.sh  dependency-audit.sh
Scripts/conformance/: README.md  fund-operator.mjs  harness-http.mjs  mcp-client.mjs  mcp-server.mjs  package-lock.json  package.json  reverse-client.mjs  run-mcp-reverse.sh  run-mcp.sh  run-reverse.sh  run-session-reverse.sh  run-session.sh  run.sh  server.mjs  session-reverse-client.mjs  session-server.mjs
Sources/CTempoTxFFI/: shim.c
Sources/MPPBodyDigest/: ContentDigest.swift
Sources/MPPClient/: AcceptPaymentPolicy.swift  ClientEvent.swift  MPPHTTPTransport.swift  PaymentClient.swift  PaymentMethodClient.swift  PaymentMethodSelection.swift  TransportSecurity.swift  (+1 more)
devlog/: channel-rail-overview.md  mppmcp-implementation-notes.md  mppproxy-implementation-notes.md  pr-e1c-step2-implementation-notes.md  pr-f-moderato-e2e-notes.md  pr-g-channel-session-notes.md  pr-h-channel-payment-client-implementation-notes.md  pr-h-followups.md  pr-h2-conformance-implementation-notes.md  subscriptions-streaming-implementation-notes.md
rust/tempo-tx-ffi/: Cargo.toml  README.md  build-ffi.sh  build-linux-lib.sh  build-xcframework.sh
rust/tempo-tx-ffi/src/: lib.rs
rust/tempo-tx-ffi/swift-smoke/: main.swift
(+174 files in other folders)
